them moment js to change snippet content and body.position.fixed instead of overflow hidden

--- a/publics/style.css
+++ b/publics/style.css
@@ -14,6 +14,7 @@ body {
 }
 .header {
     position: fixed;
+    z-index: 10;
     top: 0px;
     height: 60px;
     width: 100%;
@@ -193,8 +194,10 @@ body {
     border-radius: 8px 8px 0px 0px;
 }
 .post-snippet {
+    text-align: right;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 400;
+    opacity: 0.3;
     padding: 10px 13px;
     margin-bottom: 15px;
     margin-left: 7px;
